xx YYY 2008: 0.5.7 Miek <miek@miek.nl>
 -- spring cleaning --
 * removed rdup-purge, this can be done in a shell oneliner
 * added rdup-hist to show files from the backup and copy, cat
   or diff them.
   

15 Mar 2008: 0.5.6 Miek <miek@miek.nl>
 -- Bugfixes and documentation improvements --
 * Document the use of /dev/null better in rdup.1
 * Knut Franke: generate rdup-backups.1 from configure.ac
 * fixup relative pathname argument in conjunction 
   with the -E (exclude) option (reported by Dave Foster)
   Added: abspath.c


12 Feb 2008: 0.5.5 Miek <miek@miek.nl>
 -- code cleanups and license change: GPL 3 --
 * Changed license to GPL 3
 * Print the octal mode (%b) with 4 digits to also allow
    for the correct transfer of sgid/suid/sticky bits.
 * Add support in rdup-snap/rdup-simple for hourly backups
 * Cleanup the perl code
 * Fixup the documentation


22 Jan 2008: 0.5.4 Miek <miek@miek.nl>
  -- bugfixes --
  * Fix longstanding bug on Solaris; don't rewind filedes although
    this worked on all other unices (linux/freebsd/macos).
  * Fix the .nobackup; file located in directories with this file
    in it shouldn't be backed up.


21 Jan 2008: 0.5.3 Miek <miek@miek.nl>
  -- cleanups --
  * Didn't use File::Copy::Recursive - so drop it
  * Small documentation updates 
  * Small fixes in the c source
  * Small build updates, makedist.sh, remove 'strip'


20 Sep 2007: 0.5.2 Miek <miek@miek.nl>
  -- cleanups --
  * Fix the debian pkg - don't create /etc/rdup by default
  * rdup-purge add File::Path perl module
  * rdup-simple: enable -a (thanks to: Mathieu Chappuis)
  * Go back to plain manpages - rst isn't worth the trouble


23 Jun 2007: 0.5.1 Miek <miek@miek.nl>
  -- bug fix and feature enhancements --
  * rdup: Fix race condition with growing files and remote backups
  * Gnumakefile.in: Dont create unneed directories (Sven Hartrump) 
  * Documentation: moved to restructed text as the source for docs
    (work in progress)