@@ -1,7 +1,0 @@
-README
-
-These tools do not work anymore, they've stopped working as of
-release 0.3.0, because the format of rdup then changed.
-
-Miek Gieben
-07-Oct-2006
