@@ -1,8 +1,9 @@
 xx YYY 2008: 0.5.7 Miek <miek@miek.nl>
  -- spring cleaning --
  * removed rdup-purge, this can be done in a shell oneliner
+ * removed sh-tools/ as it was already deprecated
  * added rdup-hist to show files from the backup and copy, cat
-   or diff them.
+   or diff them. Also see rdup-hist.1
    
 
 15 Mar 2008: 0.5.6 Miek <miek@miek.nl>
